Find strings in handlebar templates when helper takes multiple

--- a/test/inputs/example.handlebars
+++ b/test/inputs/example.handlebars
@@ -11,3 +11,4 @@ Things that {{dont}} {{ pattern match a gettext call}} are ignored.
 And spurious { or }} or whatever markup doesn't confuse the parser.
 Escaped quotes are ok, {{gettext 'so let\'s test'}} them.
 So, do we {{gettext good}}?
+Ah! but {{gettext "I would like to do %1$s too" sprintf}}.
